@@ -1,3 +1,6 @@
+March 8 2012 12:12
+    Added second paddle, made score increase on hitting the wall, not on paddle
+
 March 7 2012 16:13
     Added P2 score, moved P1 score to the left
 
